--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Brendan Ronan",
   "license": "ISC",
   "dependencies": {
+    "@slack/client": "^3.8.1",
     "express": "^4.14.0"
   }
 }
