--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@slack/client": "^3.8.1",
+    "body-parser": "^1.16.0",
     "express": "^4.14.0"
   }
 }
