--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@slack/client": "^3.8.1",
     "body-parser": "^1.16.0",
-    "express": "^4.14.0"
+    "chai": "^3.5.0",
+    "express": "^4.14.0",
+    "mocha": "^3.2.0",
+    "mongodb": "^2.2.22"
   }
 }
